Bug 1282810 - Register instruction information before encoding snapshots. r=h4writer